added responsive logic to the notification dropdown

--- a/app/pug/partials/change-position-dropdown.pug
+++ b/app/pug/partials/change-position-dropdown.pug
@@ -17,7 +17,7 @@ mixin change-position-dropdown(props = {})
   .dropdown.js-dropdown.change-position-dropdown(data-dropdown="change-position-dropdown")
     .dropdown__toggle.change-position-dropdown__toggle(data-dropdown-toggle="change-position-dropdown")
       +chip({title:'Project manager', dots:true, border:'boston-blue', size:'sm'})
-    .dropdown__body.change-position-dropdown__body
+    .dropdown__box.change-position-dropdown__box
       .change-position-dropdown__header
         h5 Change position
         h5.text-silver-chalice 5234 positions
