--- a/app/pug/partials/choose-actions-dropdown.pug
+++ b/app/pug/partials/choose-actions-dropdown.pug
@@ -8,5 +8,5 @@ mixin choose-actions-dropdown(props = {})
         p.text-boston-blue Choose
       .choose-actions-dropdown__toggle-icon
         +icon({name:'chevron-down', fill:'boston-blue', width:'8', height:'6'})
-    .dropdown__body.choose-actions-dropdown__body
+    .dropdown__box.choose-actions-dropdown__box
       +actions()
