--- a/app/pug/partials/invite-employee-dropdown.pug
+++ b/app/pug/partials/invite-employee-dropdown.pug
@@ -9,7 +9,7 @@ mixin invite-employee-dropdown(props = {})
       +button({bg:'surfie-green'})(type="button")
         span Invite employee
         +icon({name:'add-person', fill:'white', width:'20', height:'13', classes:'button__icon'})
-    .dropdown__body.invite-employee-dropdown__body
+    .dropdown__box.invite-employee-dropdown__box
       .invite-employee-dropdown__items
         +times(2)
           .invite-employee-dropdown__item
