--- a/app/pug/partials/lang-combinations-dropdown.pug
+++ b/app/pug/partials/lang-combinations-dropdown.pug
@@ -5,7 +5,7 @@ mixin lang-combinations-dropdown(props = {})
   .dropdown.lang-combinations-dropdown.js-dropdown(data-dropdown="notifications")
     .dropdown__toggle.lang-combinations-dropdown__toggle(data-dropdown-toggle="notifications")
       +icon({name:'chevron-down', fill:'surfie-green', width:'8', height:'6', classes:'lang-combinations-dropdown__toggle-icon'})
-    .dropdown__body.lang-combinations-dropdown__body
+    .dropdown__box.lang-combinations-dropdown__box
       .column-group.column-group--xs
         .column-group__item
           p.font-semibold All combinations:
