--- a/app/pug/partials/manage-position-dropdown.pug
+++ b/app/pug/partials/manage-position-dropdown.pug
@@ -7,7 +7,7 @@ mixin manage-position-dropdown(props={})
     .dropdown__toggle.manage-position-dropdown__toggle(data-dropdown-toggle="manage-position-dropdown")
       +button({border:'surfie-green', size:'40'})(type="button")
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
-    .dropdown__body.manage-position-dropdown__body
+    .dropdown__box.manage-position-dropdown__box
       .manage-position-dropdown__title
         h5 Create postion
       .manage-position-dropdown__input
