--- a/app/pug/partials/massive-actions-dropdown.pug
+++ b/app/pug/partials/massive-actions-dropdown.pug
@@ -6,5 +6,5 @@ mixin massive-actions-dropdown(props = {})
       +button({bg:'alabaster'})()
         span Massive Actions
         +icon({name:'chevron-down', fill:'boston-blue', width:'8', height:'6', classes:'button__icon'})
-    .dropdown__body.massive-actions-dropdown__body
+    .dropdown__box.massive-actions-dropdown__box
       +actions({skip:'Edit permissions'})
