--- a/app/pug/partials/skills-dropdown.pug
+++ b/app/pug/partials/skills-dropdown.pug
@@ -8,7 +8,7 @@ mixin skills-dropdown(props = {})
     .dropdown__toggle.skills-dropdown__toggle(data-dropdown-toggle="skills-dropdown")
       +button({border:'surfie-green', size:'20'})(type="button")
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
-    .dropdown__body.skills-dropdown__body
+    .dropdown__box.skills-dropdown__box
       .skills-dropdown__header
         h5 Skills
         h5.text-silver-chalice 5234 skills
