--- a/app/pug/partials/user-dropdown.pug
+++ b/app/pug/partials/user-dropdown.pug
@@ -10,5 +10,5 @@ mixin user-dropdown(props = {})
       .user-dropdown__toggle-name Justas
       .user-dropdown__toggle-chevron
         +icon({name:'chevron-down', fill:'surfie-green', width:'9', height:'5'})
-    .dropdown__body.user-dropdown__body
+    .dropdown__box.user-dropdown__box
       +user-dropdown-menu()
