--- a/app/sass/components/change-position-dropdown.sass
+++ b/app/sass/components/change-position-dropdown.sass
@@ -1,8 +1,7 @@
 .change-position-dropdown
   display: inline-block
   // Elements
-  &__body
-    // display: block
+  &__box
     left: 0
     min-width: 340px
     padding: 20px
