--- a/app/sass/components/choose-actions-dropdown.sass
+++ b/app/sass/components/choose-actions-dropdown.sass
@@ -10,7 +10,7 @@
     &.is-active
       .choose-actions-dropdown__toggle-icon
         transform: rotate(180deg)
-  &__body
+  &__box
     right: 0
     min-width: 230px
     margin-top: 5px
