--- a/app/sass/components/invite-employee-dropdown.sass
+++ b/app/sass/components/invite-employee-dropdown.sass
@@ -10,7 +10,7 @@
     &.is-active
       .invite-employee-dropdown__toggle-icon
         transform: rotate(180deg)
-  &__body
+  &__box
     right: 0
     min-width: 650px
     margin-top: 5px
