--- a/app/sass/components/lang-combinations-dropdown.sass
+++ b/app/sass/components/lang-combinations-dropdown.sass
@@ -14,7 +14,7 @@
       .lang-combinations-dropdown__toggle-icon
         transform: rotate(180deg)
         fill: $c-white
-  &__body
+  &__content
     margin-top: 5px
     min-width: 215px
     padding: 20px
