--- a/app/sass/components/manage-position-dropdown.sass
+++ b/app/sass/components/manage-position-dropdown.sass
@@ -6,7 +6,7 @@
   &__toggle
     display: flex
     align-items: center
-  &__body
+  &__box
     min-width: 290px
     padding: 20px
     margin-top: 5px
