--- a/app/sass/components/massive-actions-dropdown.sass
+++ b/app/sass/components/massive-actions-dropdown.sass
@@ -4,7 +4,7 @@
     &.is-active
       .button__icon
         transform: rotate(180deg)
-  &__body
+  &__box
     right: 0
     top: auto
     bottom: 100%
