--- a/app/sass/components/skills-dropdown.sass
+++ b/app/sass/components/skills-dropdown.sass
@@ -3,7 +3,7 @@
   align-items: center
   height: 100%
   // Elements
-  &__body
+  &__box
     min-width: 420px
     padding: 20px
     margin-top: 10px
