--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -82,6 +82,7 @@
 @import ./components/edit-avatar
 @import ./components/editable-text
 @import ./components/alert
+@import ./components/content-header
 @import ./components/lang-combinations-dropdown
 @import ./components/actions
 @import ./components/choose-actions-dropdown
