--- a/app/pug/partials/manage-skills-dropdown.pug
+++ b/app/pug/partials/manage-skills-dropdown.pug
@@ -7,5 +7,5 @@ mixin manage-skills-dropdown(props = {})
     .dropdown__toggle.manage-skills-dropdown__toggle(data-dropdown-toggle="manage-skills-dropdown")
       +button({border:'surfie-green', size:'20'})(type="button")
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
-    .dropdown__body.manage-skills-dropdown__body
+    .dropdown__box.manage-skills-dropdown__box
       +manage-skills()
