--- a/app/sass/components/dropdown.sass
+++ b/app/sass/components/dropdown.sass
@@ -4,7 +4,7 @@
   &__toggle
     cursor: pointer
     user-select: none
-  &__body
+  &__box
     display: none
     position: absolute
     top: 100%
