--- a/app/sass/components/edit-avatar-modal.sass
+++ b/app/sass/components/edit-avatar-modal.sass
@@ -2,7 +2,7 @@
   padding: 60px 15px
   +media-max($bp-md)
     padding: 40px 15px
-  &__body
+  &__content
     display: flex
     flex-direction: column
     text-align: center
