--- a/app/sass/components/permissions-control-dropdown.sass
+++ b/app/sass/components/permissions-control-dropdown.sass
@@ -5,7 +5,7 @@
     background-color: $c-white
     padding: 7px
     box-shadow: $s-type-1
-  &__body
+  &__box
     min-width: 120px
     padding: 10px
     margin-top: 5px
