--- a/app/pug/partials/edit-avatar-tool.pug
+++ b/app/pug/partials/edit-avatar-tool.pug
@@ -19,10 +19,12 @@ mixin edit-avatar-tool(props = {})
     .edit-avatar-tool__range
       +input-range({classes:'edit-avatar-tool__range-input'})(value="0")
     .edit-avatar-tool__buttons
-      +button({bg:'transparent', classes:'edit-avatar-tool__delete'})(type="button")| Delete current photo
-      .button-group
-        +button({bg:'alabaster', classes:'button-group__button edit-avatar-tool__upload', tag:'label'})
-          +input({standard:false, bg:'alabaster', hidden:true})(type="file" accept="image/*")
-          span Upload new
-          +icon({name:'plus', fill:'surfie-green', width:'10', height:'10', classes:'button__icon'})
-        +button({classes:'button-group__button', bg:'surfie-green'})(type="button" data-modal-close="edit-avatar-modal")| Apply
+      .edit-avatar-tool__buttons-left
+        +button({bg:'transparent', classes:'edit-avatar-tool__delete'})(type="button")| Delete current photo
+      .edit-avatar-tool__buttons-right
+        .button-group
+          +button({bg:'alabaster', classes:'button-group__button edit-avatar-tool__upload', tag:'label'})
+            +input({standard:false, bg:'alabaster', hidden:true})(type="file" accept="image/*")
+            span Upload new
+            +icon({name:'plus', fill:'surfie-green', width:'10', height:'10', classes:'button__icon'})
+          +button({classes:'button-group__button', bg:'surfie-green'})(type="button" data-modal-close="edit-avatar-modal")| Apply
