--- a/app/sass/components/edit-avatar-tool.sass
+++ b/app/sass/components/edit-avatar-tool.sass
@@ -9,6 +9,8 @@
     justify-content: center
     height: 340px
     width: 260px
+    +media-max($bp-sm)
+      width: 240px
   &__placeholder
     cursor: pointer
     display: none
@@ -23,6 +25,8 @@
       justify-content: center
       padding: 15px
       border: 1px solid $c-alto
+      +media-max($bp-sm)
+        width: 240px
   &__change
     margin-bottom: 10px
   &__range
@@ -31,3 +35,12 @@
     display: flex
     align-items: center
     justify-content: space-between
+    flex-wrap: wrap
+    &-left
+      display: flex
+      justify-self: flex-start
+      margin-right: 10px
+      +media-max($bp-sm)
+        width: 100%
+        margin-right: 0
+        margin-bottom: 10px
