--- a/app/sass/components/skills-dropdown.sass
+++ b/app/sass/components/skills-dropdown.sass
@@ -5,9 +5,27 @@
   // Elements
   &__box
     min-width: 420px
-    padding: 20px
     margin-top: 10px
+    +media-max($bp-md)
+      position: fixed
+      top: 0
+      left: 0
+      margin-top: 0
+      width: 100%
+      min-width: 100%
+      height: 100%
+  &__content
+    display: flex
+    flex-direction: column
+    height: 100%
   &__header
+    display: none
+    width: 100%
+    +media-max($bp-md)
+      display: block
+  &__body
+    padding: 20px
+  &__heading
     display: flex
     flex-wrap: wrap
     justify-content: space-between
@@ -16,6 +34,6 @@
     margin-bottom: 20px
   &__title
     margin-bottom: 10px
-  &__wrap
+  &__scroll
     margin-bottom: 15px
     max-height: 240px
