--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -3027,7 +3027,6 @@ p,
   position: absolute;
   top: 100%;
   right: 0;
-  min-width: 100%;
   margin-bottom: 20px;
   overflow: hidden;
   background-color: #FFFFFF;
@@ -4270,11 +4269,30 @@ p,
 
 .skills-dropdown__box {
   min-width: 420px;
-  padding: 20px;
   margin-top: 10px;
 }
 
+.skills-dropdown__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+}
+
 .skills-dropdown__header {
+  display: none;
+  width: 100%;
+}
+
+.skills-dropdown__body {
+  padding: 20px;
+}
+
+.skills-dropdown__heading {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4294,7 +4312,7 @@ p,
   margin-bottom: 10px;
 }
 
-.skills-dropdown__wrap {
+.skills-dropdown__scroll {
   margin-bottom: 15px;
   max-height: 240px;
 }
@@ -4738,7 +4756,7 @@ p,
   fill: #FFFFFF;
 }
 
-.lang-combinations-dropdown__content {
+.lang-combinations-dropdown__box {
   margin-top: 5px;
   min-width: 215px;
   padding: 20px;
@@ -8436,6 +8454,7 @@ p,
     left: 0;
     margin-top: 0;
     width: 100%;
+    min-width: 100%;
     height: 100%;
   }
 
@@ -8448,6 +8467,20 @@ p,
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
+  }
+
+  .skills-dropdown__box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin-top: 0;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+  }
+
+  .skills-dropdown__header {
+    display: block;
   }
 
   .upload-documents__header {
