--- a/app/sass/components/manage-skills-dropdown.sass
+++ b/app/sass/components/manage-skills-dropdown.sass
@@ -3,7 +3,7 @@
   align-items: center
   height: 100%
   // Elements
-  &__content
+  &__box
     min-width: 500px
     padding: 20px
     margin-top: 10px
