employee settings page was refactored

--- a/app/pug/employee-settings.pug
+++ b/app/pug/employee-settings.pug
@@ -49,7 +49,7 @@ block content
                   include /pages/employee-settings/services/_index
                 .catalog__content-item.tabs__content.js-tab-content(data-content="notifications")
                   include /pages/employee-settings/notifications
-                .catalog__content-item.tabs__content.js-tab-content(data-content="notifications")
+                .catalog__content-item.tabs__content.js-tab-content(data-content="permissions")
                   include /pages/employee-settings/permissions
 
     +password-change-modal({type:'change', title:'Change password', text:'Cnanging password information Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'})
