--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -96,3 +96,4 @@
 @import ./components/permissions-box
 @import ./components/manage-position-dropdown
 @import ./components/permissions-control-dropdown
+@import ./components/name-select-dropdown
