--- a/app/sass/components/table.sass
+++ b/app/sass/components/table.sass
@@ -1,9 +1,20 @@
 .table
   width: 100%
   border-collapse: collapse
+  &--with-checkbox
+    td, th
+      &:first-child
+        padding-left: 30px !important
+        padding-right: 10px
+        +media-max($bp-sm)
+          padding-left: 15px
   tbody
     tr:nth-child(odd)
       background-color: $c-alabaster
+  tr
+    border-left: 3px solid transparent
+    &.is-checked
+      border-left: 3px solid $c-surfie-green
   td, th
     padding: 10px 15px
     vertical-align: middle
